<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ru.overwrite</groupId>
  <artifactId>OvRandomTeleport</artifactId>
  <version>1.3.0</version>
  <packaging>jar</packaging>

  <name>OvRandomTeleport</name>

  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.1</version>
          <configuration>
              <archive>
                  <manifestEntries>
                      <paperweight-mappings-namespace>mojang</paperweight-mappings-namespace>
                  </manifestEntries>
              </archive>
          </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.5.2</version>
          <configuration>
              <relocations>
                  <relocation>
                      <pattern>org.bstats</pattern>
                      <shadedPattern>ru.overwrite.rtp.utils.metrics</shadedPattern>
                  </relocation>
              </relocations>
              <filters>
                  <filter>
                      <artifact>org.bstats:**</artifact>
                      <excludes>
                          <exclude>META-INF/*.MF</exclude>
                      </excludes>
                  </filter>
                  <filter>
                      <artifact>*:*</artifact>
                      <excludes>
                          <exclude>META-INF/maven/</exclude>
                      </excludes>
                  </filter>
              </filters>
              <minimizeJar>true</minimizeJar>
          </configuration>
          <executions>
              <execution>
                  <phase>package</phase>
                  <goals>
                      <goal>shade</goal>
                  </goals>
              </execution>
          </executions>
        </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

  <repositories>
      <repository>
          <id>papermc-repo</id>
          <url>https://repo.papermc.io/repository/maven-public/</url>
      </repository>
      <repository>
          <id>sonatype</id>
          <url>https://oss.sonatype.org/content/groups/public/</url>
      </repository>
      <repository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
      </repository>
      <repository>
          <id>sk89q-repo</id>
          <url>https://maven.enginehub.org/repo/</url>
      </repository>
      <repository>
          <id>glaremasters repo</id>
          <url>https://repo.glaremasters.me/repository/towny/</url>
      </repository>
  </repositories>

  <dependencies>
      <dependency>
          <groupId>io.papermc.paper</groupId>
          <artifactId>paper-api</artifactId>
          <version>1.20.6-R0.1-SNAPSHOT</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>org.bstats</groupId>
          <artifactId>bstats-bukkit</artifactId>
          <version>3.0.2</version>
          <scope>compile</scope>
          <optional>true</optional>
      </dependency>
      <dependency>
          <groupId>com.github.MilkBowl</groupId>
          <artifactId>VaultAPI</artifactId>
          <version>1.7.1</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>com.sk89q.worldedit</groupId>
          <artifactId>worldedit-bukkit</artifactId>
          <version>7.3.2</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>com.sk89q.worldguard</groupId>
          <artifactId>worldguard-bukkit</artifactId>
          <version>7.0.9</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>com.palmergames.bukkit.towny</groupId>
          <artifactId>towny</artifactId>
          <version>0.100.2.0</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>com.github.ben-manes.caffeine</groupId>
          <artifactId>caffeine</artifactId>
          <version>3.1.8</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok</artifactId>
          <version>RELEASE</version>
          <optional>true</optional>
          <scope>provided</scope>
      </dependency>
  </dependencies>
</project>
